// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LikeButton should pass props down 1`] = `
<IconButton
  data="data1"
  data2="data2"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 4.419c-2.826-5.695-11.999-4.064-11.999 3.27 0 7.27 9.903 10.938 11.999 15.311 2.096-4.373 12-8.041 12-15.311 0-7.327-9.17-8.972-12-3.27z"
      stroke="black"
    />
  </svg>
</IconButton>
`;

exports[`renders LikeButton with no props 1`] = `
<IconButton>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 4.419c-2.826-5.695-11.999-4.064-11.999 3.27 0 7.27 9.903 10.938 11.999 15.311 2.096-4.373 12-8.041 12-15.311 0-7.327-9.17-8.972-12-3.27z"
      stroke="black"
    />
  </svg>
</IconButton>
`;

exports[`renders LikeButton with props color 1`] = `
<IconButton>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 4.419c-2.826-5.695-11.999-4.064-11.999 3.27 0 7.27 9.903 10.938 11.999 15.311 2.096-4.373 12-8.041 12-15.311 0-7.327-9.17-8.972-12-3.27z"
      fill="red"
      stroke="black"
    />
  </svg>
</IconButton>
`;
